# multipart-parser-c

./: .gitignore  .valgrind.suppressions  AGENTS.md  CHANGELOG.md  CI_ANALYSIS.md  CI_ENHANCEMENT_SUMMARY.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  Makefile  OPTIMIZATION_SUMMARY.md  PR_SUMMARY.md  README.md  SECURITY_IMPROVEMENTS.md  TESTING.md  UPSTREAM_TRACKING.md  benchmark.c  benchmark_comparison  benchmark_comparison.c  fuzz.c  multipart_parser.c  multipart_parser.h  test.c  test.lua  test_basic.c  test_binary.c  test_issue13.c  test_performance.c  test_rfc.c
.github/workflows/: ci.yml  upstream-tracking.yml
_codeql_build_dir/: CTestTestfile.cmake  Makefile  libmultipart_parser.so.1  libmultipart_parser.so.1.0.0  multipart_benchmark  multipart_parser-config.cmake  multipart_parser.pc  multipart_test
binding/lua/: AGENTS.md  Makefile  README.md  TESTING.md  example.lua  multipart.c  multipart.lua  multipart_compat.lua  multipart_parser.c  test.lua  test_chunks.lua  test_chunks2.lua  test_concat.lua  test_debug.lua  test_debug2.lua  test_debug3.lua  test_debug4.lua  test_debug5.lua  test_debug6.lua  test_debug7.lua  test_debug_nest.lua  test_debug_suite1.lua  test_improvements.lua  test_large_data.lua  test_m1_m2.lua  test_m3_simple_parse.lua  test_m4_streaming.lua  test_nested.lua  test_nested_parse.lua  test_parse_nested.lua  test_simple_debug.lua  test_single.lua  test_single2.lua  test_suite1.lua  test_trace.lua  test_trace2.lua  test_with_debug.lua
binding/lua/examples/: README.md  build_usage.lua  streaming_usage.lua
binding/lua/tests/: README.md  REORGANIZATION_SUMMARY.md  run_all_tests.lua  test-multipart.lua  test_build.lua  test_compat.lua  test_core.lua  test_h1_h2_memory_errors.lua  test_large_data.lua  test_m1_m2_limits_stats.lua  test_m3_simple_parse.lua  test_m4_streaming.lua  test_memory.lua  test_multipart.lua  test_state.lua  test_streaming.lua
cmake/: multipart_parser-config.cmake.in  multipart_parser.pc.in
docs/: HEADER_PARSING_GUIDE.md  IMMEDIATE_ACTIONS.md  ISSUES_TRACKING.md  MERGE_READY.md  OPTIMIZATION.md  OPTIMIZATION_ZH.md  PERFORMANCE_RESULTS.md  PHASE2_SUMMARY.md  PR_ANALYSIS.md  README.md  REORGANIZATION_NOTES.md  SECURITY.md  SIMD_ANALYSIS.md  STATUS.md  TESTING.md
docs/ci/: CI_GUIDE.md
docs/rfc/: README.md  RFC_7578_COMPLIANCE.md  RFC_COMPARISON.md
docs/upstream/: ISSUES_TRACKING.md  PR_ANALYSIS.md  TRACKING.md
examples/: README.md  advanced_example.lua  advanced_parsing  advanced_parsing.c
scripts/: check-upstream.sh
tests/: Makefile  README.md  REORGANIZATION_PLAN.md  test_advanced.c  test_basic.c  test_binary.c  test_common.h  test_errors.c  test_main.c  test_reset.c  test_rfc.c  test_safety.c
